--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-xml-parser": "^1.0.7",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "start": "react-scripts start",
